<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mi Mercado</string>

    <string name="welcome">Bienvenido</string>
    <string name="main_description">Para continuar inicia sesión o crea una cuenta nueva:</string>
    <string name="start_session">Iniciar sesión</string>
    <string name="create_account">Crear cuenta</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="accept">Aceptar</string>
    <string name="enter_email">Ingresa tu email</string>
    <string name="enter_new_password">Crea una contraseña</string>
    <string name="enter_your_password">Ingresa tu contraseña</string>
    <string name="missed_email">Ingresa un email válido</string>
    <string name="missed_password">Ingresa una contraseña con mínimo 8 caracteres</string>
    <string name="signup_recovery_message">Este correo ya ha sido usado. Intente iniciar sesión o recuperar su cuenta</string>
    <string name="signin_no_account_message">El correo ingresado no existe.</string>
    <string name="signin_invalid_pass_message">La contraseña ingresada no es correcta.</string>
    <string name="aditional_data">Datos adicionales</string>
    <string name="firstname">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="storename">Nombre de la tienda</string>
    <string name="missed_firstname">Debes ingresar tu nombre</string>
    <string name="missed_lastname">Debes ingresar tu apellido</string>
    <string name="missed_storename">Debes ingresar el nombre de la tienda</string>
    <string name="unknown_error">Ha ocurrido un error desconocido</string>
    <string name="home">Inicio</string>
    <string name="sales">Ventas</string>
    <string name="products">Productos</string>
    <string name="cart_empty_message">Aun no hay productos agregados. Presiona el boton para escanear codigo de barra.</string>
    <string name="state_account">Estado de cuenta</string>
    <string name="quantity">Cantidad</string>
    <string name="code">Código de barras</string>
    <string name="measure">Medida</string>
    <string name="unit_price">Precio unitario</string>
    <string name="add_to_list">Agregar al listado</string>
    <string name="cancel">Cancelar</string>
    <string name="new_sale">Nueva venta</string>
    <string name="error_fatal_missed_data">No se han encontrado los datos de la tienda. Tendrá que crear sus datos nuevamente.</string>
    <string name="error_recovery">La aplicación se ha recuperado después de un error desconocido. Inicie la app nuevamente.</string>
    <string name="create_new_product">Crear nuevo producto</string>
    <string name="product_name">Nombre del producto</string>
    <string name="product_measure">Medida (kg, litro, mg, etc)</string>
    <string name="product_price_buy">Precio de compra</string>
    <string name="product_price_sell">Precio de venta</string>
    <string name="create_product">Crear producto</string>
    <string name="product_quantity">Unidades compradas</string>
    <string name="scan_barcode">Escanear código de barras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>