<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/code"
                    android:textStyle="bold"
                    android:textSize="8pt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/measure"
                    android:textStyle="bold"
                    android:textSize="8pt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/unit_price"
                    android:textStyle="bold"
                    android:textSize="8pt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="0000000000000"
                    android:textSize="8pt"
                    android:id="@+id/sku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:text="100mg"
                    android:textSize="8pt"
                    android:id="@+id/measure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="$1500"
                    android:textSize="8pt"
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="8pt"
            android:text="@string/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:background="@color/zxing_transparent"
                android:src="@drawable/minus_circle"
                android:id="@+id/btnLess"
                android:layout_width="70dp"
                android:layout_height="70dp"/>

            <TextView
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="1"
                android:textSize="14pt"
                android:id="@+id/quantity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:background="@color/zxing_transparent"
                android:src="@drawable/plus_circle"
                android:id="@+id/btnMore"
                android:layout_width="70dp"
                android:layout_height="70dp"/>

        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="Total: $1500"
            android:textSize="12pt"
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="20dp"
            android:text="@string/add_to_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>