<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.SigninActivity">

    <ScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:background="#FFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10pt"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_email" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:background="#FFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10pt"
                    android:inputType="textPassword"
                    android:hint="@string/enter_your_password" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignin"
                android:layout_marginTop="20dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textSize="8pt"
                android:text="@string/accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>